Criação das telas e do serviço

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-menu></app-menu>
+<div class="content-wrapper">
+    <!-- Main content -->
+    <section class="content">
+        <router-outlet></router-outlet>
+    </section>
+</div>
+<app-footer></app-footer>
