--- a/src/app/listar-pessoa/listar-pessoa.component.html
+++ b/src/app/listar-pessoa/listar-pessoa.component.html
@@ -1,6 +1,5 @@
-<div class="card text-white bg-info">
-	<div class="card-header"> Listagem de Pessoas </div>
-	<div class="card-body">
+<div>
+	<h3> Listagem de Empresas </h3>
 		<div class="row">
 		    <div class="col-md-3">
 		    	<div class="form-group">
@@ -13,7 +12,7 @@
 		    </div>
 		    <div class="col-md-3">
 		    	<div class="form-group">
-		    		<label for="cpf">CPF</label>
+		    		<label for="cpf">Endereço</label>
 		    		<input type="number" name="cpf" class="form-control" [(ngModel)]="cpf">
 		    	</div>
 		    </div>	    
@@ -21,10 +20,7 @@
 		    	<br>
 		    	<div class="row">
 		    		<div class="form-group col-md-6">
-		    			<button type="button" class="btn btn-secundary" (click)="getPessoas()">Pesquisar</button>
-		    		</div>
-		    		<div class="form-group col-md-6">
-		    			<button type="button" class="btn btn-primary" [routerLink]="'/cadastrar-empresa'">Cadastrar</button>
+		    			<button type="button" class="btn btn-primary" (click)="getPessoas()">Pesquisar</button>
 		    		</div>
 		    	</div>
 	    		<br>
@@ -74,7 +70,4 @@
 			
 		</table>
 		
-	</div>
-	<div class="card-footer text-muted">
-	  </div>
 </div>
